--- a/index.html
+++ b/index.html
@@ -1309,13 +1309,13 @@ canvas{ display:block }
 
 <!-- Launcher -->
 <!-- Launcher (no timer, scrollable, right-aligned) -->
-<div><div id="inviteBtnWrap" class="luck-btn-wrap">
+<div id="inviteBtnWrap" class="luck-btn-wrap">
   <img id="inviteBtnImg" class="luck-btn-img" src="img/getrewards.png" alt="Get rewards">
 </div>
 <div id="luckBtnWrap" class="luck-btn-wrap">
   <img id="luckBtnImg" class="luck-btn-img" src="img/testyourluck.png" alt="Test your luck">
   <div id="luckBtnTimer" class="luck-btn-timer" hidden>00:00:00</div>
-</div></div>
+</div>
 
 
 
